--- a/config/config.yml
+++ b/config/config.yml
@@ -1,4 +1,4 @@
-.env:
+env:
   algorithm: 'NSA' # or 'VNSA'
   nsa_seeds: [ 3779, 7793, 9311 ] #[197, 311, 337, 719, 733, 971, 991, 1193, 1931, 3119, 3779, 7793, 9311, 9377, 11939, 19937, 37199, 39119, 71993, 93719]
   nsa_detectors_nr: 4000
